feat: implement auth module
