# doc/api.yaml
@@ -104,91 +104,128 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Track'
-  # responses:
-  #   UnauthorizedError:
-  #     description: Access token is missing or invalid
-  # securitySchemes:
-  #   bearerAuth:
-  #     type: http
-  #     scheme: bearer
-  #     bearerFormat: JWT
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 
-# security:
-#   - bearerAuth: []
+security:
+  - bearerAuth: []
 
 paths:
-  # /login:
-  #   post:
-  #     tags:
-  #       - Login
-  #     security: []
-  #     summary: Login
-  #     description: Logins a user and returns a JWT-token
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             title: example
-  #             properties:
-  #               login:
-  #                 type: string
-  #                 description: Username
-  #               password:
-  #                 type: string
-  #                 description: Password
-  #             required:
-  #               - user
-  #               - login
-  #     responses:
-  #       200:
-  #         description: Successful login.
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 token:
-  #                   type: string
-  #               description: JWT Token
-  #       403:
-  #         description: Incorrect login or password
-  # /signup:
-    # post:
-    #   tags:
-    #     - Signup
-    #   security: [ ]
-    #   summary: Signup
-    #   description: Signup a user
-    #   requestBody:
-    #     required: true
-    #     content:
-    #       application/json:
-    #         schema:
-    #           type: object
-    #           title: example
-    #           properties:
-    #             login:
-    #               type: string
-    #               minLength: 3
-    #               maxLength: 255
-    #               description: Username
-    #             password:
-    #               type: string
-    #               format: password
-    #               pattern: ^[a-zA-Z0-9]{3,30}
-    #               description: Password
-    #           required:
-    #             - login
-    #             - password
-    #   responses:
-    #     204:
-    #       description: Successful signup
-    #     400:
-    #       description: Bad request
-    #     409:
-    #       description: Conflict. Login already exists
+  /auth:
+    /login:
+      post:
+        tags:
+          - Login
+        security: []
+        summary: Login
+        description: Logins a user and returns a JWT-tokens
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                title: example
+                properties:
+                  login:
+                    type: string
+                    description: Username
+                  password:
+                    type: string
+                    description: Password
+                required:
+                  - user
+                  - login
+        responses:
+          200:
+            description: Successful login.
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    accessToken:
+                      type: string
+                    refreshToken:
+                      type: string
+                  description: JWT Tokens
+          400:
+            description: Bad request
+          403:
+            description: Incorrect login or password
+    /signup:
+      post:
+        tags:
+          - Signup
+        security: [ ]
+        summary: Signup
+        description: Signup a user
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                title: example
+                properties:
+                  login:
+                    type: string
+                    description: Username
+                  password:
+                    type: string
+                    format: password
+                    description: Password
+                required:
+                  - login
+                  - password
+        responses:
+          201:
+            description: Successful signup
+          400:
+            description: Bad request
+    /refresh:
+      post:
+        tags:
+          - Refresh
+        security: []
+        summary: Refresh
+        description: Refresh and returns a JWT-tokens
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                title: example
+                properties:
+                  refreshToken:
+                    type: string
+                    description: Username
+                required:
+                  - refreshToken
+        responses:
+          200:
+            description: Successful refresh.
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    accessToken:
+                      type: string
+                    refreshToken:
+                      type: string
+                  description: JWT Tokens
+          401:
+            description: No refreshToken in body
+          403:
+            description: Refresh token is invalid or expired
   /user:
     get:
       tags:
