# src/modules/auth/dto/signup.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class SignupDto {
+  @IsString()
+  @IsNotEmpty()
+  readonly login: string;
+
+  @IsString()
+  @IsNotEmpty()
+  readonly password: string;
+}
